# MilkTeaPot

./: .gitignore  CMakeLists.txt  README.md
Milk/: CMakeLists.txt
Milk/include/: milk.h
Milk/include/milk/: common.h  core.h  logger.h  wrapper.h
Milk/include/milk/common/: context.h  fileio.h  printer.h
Milk/include/milk/wrapper/: config.h  logger.h
Milk/src/main/cpp/: codec.cc  codec.h  config.h  context.cc  context.h  control.h  dump.h  fileio.cc  fileio.h  launch.h  launcher.h  lib.cc  main.cc  main_linux.cc  play.cc  play.h  print.h  printer.cc  printer.h  probe.cc  renderer.h  util.h
MilkPowder/: CMakeLists.txt
MilkPowder/include/: milkpowder.h
MilkPowder/include/milkpowder/: common.h  core.h  event.h  holder.h  message.h  meta.h  midi.h  read.h  sysex.h  track.h  wrapper.h  write.h
MilkPowder/include/milkpowder/common/: factory.h  handle.h  mapping.h
MilkPowder/include/milkpowder/wrapper/: event.h  factory.h  handle.h  holder.h  message.h  meta.h  midi.h  reader.h  sysex.h  track.h  writer.h
MilkPowder/src/main/cpp/: defer.h  dump.cc  event.h  except.h  factory.cc  handle.cc  lib.cc  log.h  message.h  meta.h  midi.h  parse.cc  soybean.cc  sysex.h  track.h  util.h
MilkTea/: CMakeLists.txt
MilkTea/include/: camellia.h  cocoa.h  milktea.h
MilkTea/include/camellia/: cursor.h  dispatcher.h  pipeline.h
MilkTea/include/cocoa/: cursor.h  dispatcher.h  pipeline.h
MilkTea/include/milktea/: callback.h  common.h  core.h  cursor.h  defer.h  dispatcher.h  exception.h  fromstring.h  logger.h  pipeline.h  timer.h  timerfuture.h  timertask.h  timerunit.h  timerworker.h  tostring.h  util.h  wrapper.h
MilkTea/include/milktea/common/: closure.h  defer.h  except.h  logger.h  macro.h  tostring.h  transport.h
MilkTea/include/milktea/core/: closure.h  except.h  logger.h  macro.h  transport.h
MilkTea/include/milktea/wrapper/: except.h  fromstring.h  logger.h  tostring.h  transport.h
MilkTea/src/main/cpp/: except.cc  except.h  exception.h  lib.cc  logger.cc  logger.h  timer.cc  timerfuture.h  timermanager.h  timertask.h  timerworker.h  transport.cc
MilkTea_command/: CMakeLists.txt
MilkTea_command/include/: milktea_command.h
MilkTea_command/include/milktea_command/: cursor.h  dispatcher.h  pipeline.h
MilkTea_command/src/main/cpp/: lib.cc
Milk_console/: CMakeLists.txt
Milk_console/include/: milk_console.h
Milk_console/include/milk_console/: common.h  core.h  wrapper.h
Milk_console/src/main/cpp/: context.h  fileio.h  foundation.h  lib.cc  logger.h  printer.h
Milk_linux/: CMakeLists.txt
Milk_linux/src/main/cpp/: main.cc
Milk_mac/: CMakeLists.txt
Milk_mac/src/main/cpp/: main.cc
Milk_windows/: CMakeLists.txt
Milk_windows/src/main/cpp/: factory.h  handle.h  main.cc  pipe.h  proc.h  proxy.cc  proxy.h  remote.h
SoyBean/: CMakeLists.txt
SoyBean/include/: soybean.h
SoyBean/include/soybean/: common.h  core.h  factory.h  wrapper.h
SoyBean/include/soybean/common/: factory.h  handle.h
SoyBean/include/soybean/wrapper/: factory.h  handle.h
SoyBean/src/main/cpp/: except.h  factory.cc  handle.cc  lib.cc  log.h  util.h  wrapper.cc
SoyBean_linux/: CMakeLists.txt
SoyBean_linux/src/main/cpp/: lib.cc
SoyBean_mac/: CMakeLists.txt
SoyBean_mac/src/main/cpp/: lib.cc
SoyBean_windows/: CMakeLists.txt
SoyBean_windows/include/: soybean_windows.h
SoyBean_windows/include/soybean_windows/: common.h  core.h  wrapper.h
SoyBean_windows/src/main/cpp/: factory.h  handle.h  lib.cc  proxy.cc  proxy.h  wrapper.cc
SoyMilk/: CMakeLists.txt
SoyMilk/include/: soybean.h  soymilk.h
SoyMilk/include/soybean/: core.h
SoyMilk/include/soymilk/: callback.h  common.h  controller.h  core.h  player.h  wrapper.h
SoyMilk/include/soymilk/common/: frame.h  player.h  renderer.h
SoyMilk/include/soymilk/core/: frame.h  player.h  renderer.h
SoyMilk/include/soymilk/wrapper/: controller.h  player.h
SoyMilk/src/main/cpp/: buffer.h  callback.cc  clock.h  controller.cc  decode.h  frame.cc  frame.h  lib.cc  listener.h  perform.h  player.h  renderer.cc  sorter.h
Soybean_linux/include/: soybean_linux.h
Soybean_mac/include/: soybean_mac.h
Soybean_windows/: CMakeLists.txt
Soybean_windows/include/: soybean_windows.h
Soybean_windows/include/soybean_windows/: core.h
Soybean_windows/src/main/cpp/: except.h  factory_impl.h  handle_impl.h  lib.cc  log.h  util.h  wrapper.cc  wrapper.h
Tea/: CMakeLists.txt
Tea/include/: tea.h
Tea/include/tea/: cast.h  def.h  err.h  facade.h  file.h  func.h  life.h  log.h  mask.h  ref.h  slice.h
Tea/src/main/cpp/: err.cc  err.h  lib.cc  log.h
TeaPot/: CMakeLists.txt
TeaPot/include/: teapot.h
TeaPot/include/teapot/: common.h  core.h  timerfuture.h  timertask.h  timerworker.h  wrapper.h
TeaPot/include/teapot/common/: action.h  timerfuture.h  timertask.h  timerunit.h  timerworker.h
TeaPot/include/teapot/core/: action.h  timer.h
TeaPot/include/teapot/wrapper/: timerfuture.h  timertask.h  timerworker.h
TeaPot/src/main/cpp/: lib.cc  timerfuture.h  timermanager.h  timertask.h  timerworker.h
Yogurt/: CMakeLists.txt
Yogurt/include/: yogurt.h
Yogurt/include/yogurt/: common.h  core.h  wrapper.h
Yogurt/include/yogurt/common/: record.h
Yogurt/include/yogurt/core/: record.h
Yogurt/include/yogurt/wrapper/: record.h
Yogurt/src/main/cpp/: clock.h  factory.h  handle.h  lib.cc  record.h  tape.h
