cmake_minimum_required(VERSION 3.6.4)

project(MilkTeaPot)

if(MilkTeaPot_system_flag_linux MATCHES "")
    if (UNIX AND NOT APPLE)
        set(MilkTeaPot_system_flag_linux "ON")
    else()
        set(MilkTeaPot_system_flag_linux "OFF")
    endif()
endif()

if(MilkTeaPot_system_flag_windows MATCHES "")
    if (WIN32)
        set(MilkTeaPot_system_flag_windows "ON")
    else()
        set(MilkTeaPot_system_flag_windows "OFF")
    endif()
endif()

if(MilkTeaPot_system_flag_mac MATCHES "")
    if (APPLE)
        set(MilkTeaPot_system_flag_mac "ON")
    else()
        set(MilkTeaPot_system_flag_mac "OFF")
    endif()
endif()

# set(CMAKE_C_COMPILER clang)
# set(CMAKE_CXX_COMPILER clang++)

set(CMAKE_CXX_STANDARD 17)
set(CMAKE_CXX_STANDARD_REQUIRED ON)
set(CMAKE_CXX_EXTENSIONS OFF)

add_subdirectory(Tea)
add_subdirectory(MilkTea)
add_subdirectory(MilkTea_command)
add_subdirectory(TeaPot)
add_subdirectory(MilkPowder)
add_subdirectory(SoyMilk)
add_subdirectory(Yogurt)
add_subdirectory(Milk)
add_subdirectory(Milk_console)

if(NOT MilkTeaPot_system_flag MATCHES "OFF")
    message("${PROJECT_NAME}: MilkTeaPot_system_flag_linux = ${MilkTeaPot_system_flag_linux}")
    if (MilkTeaPot_system_flag_linux MATCHES "ON")
        add_subdirectory(Milk_linux)
    endif()
    message("${PROJECT_NAME}: MilkTeaPot_system_flag_windows = ${MilkTeaPot_system_flag_windows}")
    if (MilkTeaPot_system_flag_windows MATCHES "ON")
        add_subdirectory(Milk_windows)
    endif()
    message("${PROJECT_NAME}: MilkTeaPot_system_flag_mac = ${MilkTeaPot_system_flag_mac}")
    if (MilkTeaPot_system_flag_mac MATCHES "ON")
        add_subdirectory(Milk_mac)
    endif()
endif()
